--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -3,12 +3,9 @@ name: Clojure CI
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
-  build:
-
+  ci:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,3 +18,21 @@ jobs:
       
     - name: Run tests
       run: make tests
+  cd:
+    runs-on: ubuntu-latest
+    needs: ci
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Docker login
+      run: docker login --username ${{ secrets.DOCKER_LOGIN }} --password ${{ secrets.DOCKER_TOKEN }}
+    - name: Build
+      run: docker build -t health-crud .
+    - name: Tags
+      run: |
+        docker tag health-crud ${{ secrets.DOCKER_LOGIN }}/health-crud:${{ github.sha }}
+        docker tag health-crud ${{ secrets.DOCKER_LOGIN }}/health-crud:latest
+    - name: Push
+      run: |
+        docker push ${{ secrets.DOCKER_LOGIN }}/health-crud:${{ github.sha }}
+        docker push ${{ secrets.DOCKER_LOGIN }}/health-crud:latest
