--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   db:
     image: postgres:latest
     volumes:
-      - ./resources/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./postgres-data:/var/lib/postgresql/data
     restart: always
     expose:
       - 5432
@@ -12,9 +12,7 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
   health-crud:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: solar7455/health-crud:latest
     working_dir: /usr/src/app/target/uberjar/
     command: "java -jar health-crud.jar"
     ports:
