--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,23 +1,25 @@
 version: '3'
 
 volumes:
-  postgres_volume:
+  postgres_test_volume:
 
 services:
   db:
     image: postgres:latest
     volumes:
-      - postgres_volume:/var/lib/postgresql/data
-    restart: always
+      - postgres_test_volume:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=patients
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
   health-crud:
-    image: solar7455/health-crud:latest
-    working_dir: /usr/src/app/target/uberjar/
-    command: "java -jar health-crud.jar"
-    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: .
+    working_dir: /usr/src/app/
+    volumes:
+      - .:/usr/src/app/
+    command: "lein run"
     ports:
       - "4000:4000"
     environment:
