--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -11,28 +11,28 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: lein deps
+      run: clj -Sdeps
       
     - name: Run checks
       run: make checks
       
     - name: Run tests
       run: make tests
-  cd:
-    runs-on: ubuntu-latest
-    needs: ci
-    
-    steps:
-    - uses: actions/checkout@v2
-    - name: Docker login
-      run: docker login --username ${{ secrets.DOCKER_LOGIN }} --password ${{ secrets.DOCKER_TOKEN }}
-    - name: Build
-      run: docker build -t health-crud .
-    - name: Tags
-      run: |
-        docker tag health-crud ${{ secrets.DOCKER_LOGIN }}/health-crud:${{ github.sha }}
-        docker tag health-crud ${{ secrets.DOCKER_LOGIN }}/health-crud:latest
-    - name: Push
-      run: |
-        docker push ${{ secrets.DOCKER_LOGIN }}/health-crud:${{ github.sha }}
-        docker push ${{ secrets.DOCKER_LOGIN }}/health-crud:latest
+  #cd:
+  #  runs-on: ubuntu-latest
+  #  needs: ci
+  #  
+  #  steps:
+  #  - uses: actions/checkout@v2
+  #  - name: Docker login
+  #    run: docker login --username ${{ secrets.DOCKER_LOGIN }} --password ${{ secrets.DOCKER_TOKEN }}
+  #  - name: Build
+  #    run: docker build -t health-crud .
+  #  - name: Tags
+  #    run: |
+  #      docker tag health-crud ${{ secrets.DOCKER_LOGIN }}/health-crud:${{ github.sha }}
+  #      docker tag health-crud ${{ secrets.DOCKER_LOGIN }}/health-crud:latest
+  #  - name: Push
+  #    run: |
+  #      docker push ${{ secrets.DOCKER_LOGIN }}/health-crud:${{ github.sha }}
+  #      docker push ${{ secrets.DOCKER_LOGIN }}/health-crud:latest
