--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -9,7 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@latest
+    - uses: DeLaGuardo/setup-graalvm@2.0
+      with:
+        graalvm-version: '19.3.1.java11'
+    - uses: DeLaGuardo/setup-clojure@2.0
+      with:
+        tools-deps: '1.10.1.469'
     - name: Install dependencies
       run: clj -Sdeps
       
