--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         tools-deps: '1.10.1.469'
     - name: Install dependencies
-      run: clj -Sdeps
+      run: clojure -Sdeps
       
     - name: Run checks
       run: make checks
