--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -10,14 +10,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: DeLaGuardo/setup-graalvm@2.0
+    - name: Prepare java
+      uses: actions/setup-java@v1
       with:
-        graalvm-version: '19.3.1.java11'
-    - uses: DeLaGuardo/setup-clojure@2.0
+        java-version: 1.8
+
+    - name: Install clojure tools-deps
+      uses: DeLaGuardo/setup-clojure@master
       with:
-        tools-deps: '1.10.1.469'
-    - name: Install dependencies
-      run: clojure -Sdeps
+        tools-deps: 1.10.1.469
       
     - name: Run checks
       run: make checks
